@@ -4,11 +4,11 @@ plugins {
 
 android {
 
-    compileSdkVersion 28
+    compileSdkVersion 30
 
     defaultConfig {
-        minSdkVersion 17
-        targetSdkVersion 28
+        minSdkVersion 21
+        targetSdkVersion 30
         versionCode 1
         versionName '1.3.5'
 
@@ -32,4 +32,7 @@ dependencies {
 
     implementation 'androidx.appcompat:appcompat:1.0.0'
 
+}
+tasks.withType( JavaCompile ).configureEach {
+    options.forkOptions.jvmArgs.addAll( ['--add-opens', 'jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED'] )
 }
